<?xml version="1.0"?>
<package format="2">
  <name>system_fingerprint</name>
  <version>0.5.0</version>
  <description>The system_fingerprint package</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD 2-clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>
  <depend>rosnode</depend>
  <depend>rospy</depend>
  <depend>rosservice</depend>
  <exec_depend>python3-git</exec_depend>
</package>
