<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_fingerprint</name>
  <version>0.7.0</version>
  <description>The system_fingerprint package</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD 2-clause</license>
  <depend>rcl_interfaces</depend>
  <depend>rclpy</depend>
  <depend>ros2action</depend>
  <depend>ros2cli</depend>
  <depend>ros2node</depend>
  <depend>ros2param</depend>
  <depend>ros2topic</depend>
  <exec_depend>python3-git</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
